sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: '(' expected but identifier found.
  while ecart >0
        ^AlgShellSort:5: error: illegal start of simple expression
} 
^