sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart:Int = getNombresValeurs()/2
  while ecart >0
}